
      \item \code{colorRamp()} (and hence \code{colorRampPalette()}) now
      also works for the boundary case of just one color when the ramp is
      flat.

      \item \code{qqline()} gets new optional arguments
      \code{distribution}, \code{probs}, and \code{qtype}, following
      the example of \pkg{lattice}'s \code{panel.qqmathline()}.
    }
  }

  \subsection{PERFORMANCE IMPROVEMENTS}{
    \itemize{
      \item In package \pkg{parallel}, \code{makeForkCluster()} and the
      multicore-based functions use native byte order for serialization
      (deferred from 2.15.0).

      \item \code{lm.fit()}, \code{lm.wfit()}, \code{glm.fit()} and
      \code{lsfit()} do less copying of objects, mainly by using
      \code{.Call()} rather than \code{.Fortran()}.

      \item \code{.C()} and \code{.Fortran()} do less copying: arguments
      which are raw, logical, integer, real or complex vectors and are
      unnamed are not copied before the call, and (named or not) are not
      copied after the call.  Lists are no longer copied (they are
      supposed to be used read-only in the C code).

      \item \code{tabulate()} makes use of \code{.C(DUP = FALSE)} and
      hence does not copy \code{bin}.  (Suggested by Tim Hesterberg.)
      It also avoids making a copy of a factor argument \code{bin}.

      \item Other functions (often or always) doing less copying include
      \code{cut()}, \code{dist()}, the complex case of \code{eigen()},
      \code{hclust()}, \code{image()}, \code{kmeans()}, \code{loess()},
      \code{stl()} and \code{svd(LINPACK = TRUE)}.

    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
   \itemize{
      \item The converters for use with \code{.C()} (see
      \code{?getCConverterDescriptions}) are deprecated: use the
      \code{.Call()} interface instead.  There are no known examples
      (they were never fully documented).
    }
  }

  \subsection{INSTALLATION}{
    \itemize{