@@ -1568,9 +1568,9 @@ SEXP attribute_hidden do_dotCode(SEXP call, SEXP op, SEXP args, SEXP env)
 		    **cptr0 = (char**) R_alloc(n, sizeof(char*));
 		for (R_xlen_t i = 0 ; i < n ; i++) {
 		    const char *ss = translateChar(STRING_ELT(s, i));
-		    int n = strlen(ss) + 1 + 2 * NG;
-		    char *ptr = (char*) R_alloc(n, sizeof(char));
-		    memset(ptr, FILL, n);
+		    int nn = strlen(ss) + 1 + 2 * NG;
+		    char *ptr = (char*) R_alloc(nn, sizeof(char));
+		    memset(ptr, FILL, nn);
 		    cptr[i] = cptr0[i] = ptr + NG;
 		    strcpy(cptr[i], ss);
 		}
@@ -1583,8 +1583,17 @@ SEXP attribute_hidden do_dotCode(SEXP call, SEXP op, SEXP args, SEXP env)
 		char **cptr = (char**) R_alloc(n, sizeof(char*));
 		for (R_xlen_t i = 0 ; i < n ; i++) {
 		    const char *ss = translateChar(STRING_ELT(s, i));
-		    cptr[i] = (char*) R_alloc(strlen(ss) + 1, sizeof(char));
-		    strcpy(cptr[i], ss);
+		    int nn = strlen(ss) + 1;
+		    if(nn > 1) {
+			cptr[i] = (char*) R_alloc(nn, sizeof(char));
+			strcpy(cptr[i], ss);
+		    } else {
+			/* Protect ourselves against those who like to
+			   extend "", maybe using strncpy */
+			nn = 128;
+			cptr[i] = (char*) R_alloc(nn, sizeof(char));
+			memset(cptr[i], 0, nn);
+		    }
 		}
 		cargs[na] = (void*) cptr;
 #ifdef R_MEMORY_PROFILING
@@ -1594,7 +1603,7 @@ SEXP attribute_hidden do_dotCode(SEXP call, SEXP op, SEXP args, SEXP env)
 	    break;
 	case VECSXP:
 	    if (Fort) error(_("invalid mode to pass to Fortran (arg %d)"), na + 1);
-	    /* read-only, so this is safe */
+	    /* Used read-only, so this is safe */
 #ifdef USE_RINTERNALS
 	    cargs[na] = (void*) DATAPTR(s);
 #else
